# dendro-old

./: .codespellrc  .flake8  .gitignore  .pylintrc  README.md  _vercel_dev.json  _vercel_prod.json  index.html  package.json  requirements.txt  vercel.json.readme.md
python/: .gitignore  README.md  mock-output-file.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py
python/dendro/: __init__.py  cli.py  version.txt
python/dendro/aws_batch/: aws_batch_job_definition.py
python/dendro/client/: Project.py  __init__.py  _create_batch_id.py  _upload_blob.py  set_file.py  submit_job.py
python/dendro/common/: _api_request.py  dendro_types.py
python/dendro/compute_resource/: AppManager.py  ComputeResourceException.py  JobManager.py  PubsubClient.py  SlurmJobHandler.py  _run_job_in_aws_batch.py  _start_job.py  create_compute_resource_api_key.py  register_compute_resource.py  start_compute_resource.py
python/dendro/iaac/: README.md
python/dendro/internal_job_monitoring/: common.py  console_output_monitor.py  job_status_monitor.py  resource_utilization_monitor.py
python/dendro/sdk/: App.py  AppProcessor.py  FileManifest.py  InputFile.py  InputFolder.py  Job.py  OutputFile.py  OutputFolder.py  ProcessorBase.py  __init__.py  _get_context_attributes_for_dataclass.py  _load_spec_from_uri.py  _make_spec_file.py  _run_job.py  get_project_file.py  (+6 more)
python/protocaas/: cli.py  mock.py
python/tests/: test_api.py  test_api_request_failures.py  test_client.py  test_compute_resource.py  test_crypto_keys.py  test_github_auth_route.py  test_integration.py  test_misc.py  test_sdk.py
(+315 files in other folders)
