[build-system]
requires = ["setuptools"]

[project]
name = "dendro"
version = "0.1.3"
description = "Web framework for neurophysiology data analysis"
authors = [
    { name = "Jeremy Magland", email = "jmagland@flatironinstitute.org" },
    { name = "Luiz Tauffer", email = "luiz@taufferconsulting.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "click",
    "simplejson",
    "numpy",
    "PyYAML",
    "remfile",
    "pydantic",
    "cryptography",
    "h5py",
    "requests"
]

[tool.setuptools.packages.find]
where = [""]

[project.urls]
repository = "https://github.com/flatironinstitute/dendro"

[project.scripts]
dendro = "dendro.cli:main"

[project.optional-dependencies]
compute_resource = [
    "pubnub>=7.2.0",
]
api = [
    "fastapi",
    "motor",
    "simplejson",
    "pydantic",
    "aiohttp"
]